enter the toppings selected into the pizza object.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
             </div>
           </div>
         </div>
-
+        <div id="selectSize">
+          <select class-"form-control" id="size">
+            <option selected>Small</option>
+            <option>Medium</option>
+            <option>Large</option>
+          </select>
+        </div>
+        <div id="selectToppings">
+            <input type="checkbox" class="toppings" id="pepperoni">Pepperoni<br>
+            <input type="checkbox" class="toppings"  id="hamburger">Hamburger<br>                     <input type="checkbox" class="toppings"  id="sausage">Sausage<br>            <input type="checkbox" class="toppings"  id="olives">Olives<br>            <input type="checkbox" class="toppings"  id="onions">Onions<br>            <input type="checkbox" class="toppings"  id="jalapenos">Jalapenos<br>
+            <input type="checkbox" class="toppings"  id="pineapple">Pineapple<br>
+        </div>
         <button class="btn btn-info btn-lg" type="submit" id="Order">Place Order</button>
       </form>
       <div id="priceSum">
