--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <img src="img/heavenlySlice.gif" alt="Heavenly Slice pic">
         </div>
       </div>
+      <p id="prices">
+        <span class="price">Prices: </span>Small: $7.00, Medium: $9.00, Large: $11.00 (All toppings are an additional $1.50 each.)
+      </p>
     </div>
     <div class="container container-table">
       <form id="orderForm">
