make some style changes.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="col-sm-6">
           <h1 class="text-center" id="storeName">Heavenly Slice</h1>
         </div>
-        <div class="col-sm-6 heavenlySlice">
-          <img src="img/heavenlySlice.gif" alt="Heavenly Slice pic">
+        <div class="col-sm-6">
+          <img src="img/heavenlySlice.gif" alt="Heavenly Slice pic" id="heavenlySlice">
         </div>
       </div>
       <p id="prices">
-        <span class="price">Prices: </span>Small: $7.00, Medium: $9.00, Large: $11.00 (All toppings are an additional $1.50 each.)
+        <span class="pricing">Prices: </span>Small: $7.00, Medium: $9.00, Large: $11.00 (All toppings are an additional $1.50 each.)
       </p>
     </div>
     <div class="container container-table">
@@ -67,14 +67,14 @@
         </div>
       </form>
     </div>
-    <div class="container">
+    <div class="container pricing">
       <div class="row">
         <div class="col-sm-7" id="priceSum">
           <h2 id="price" class="text-center"></h2>
         </div>
         <div class="col-sm-5 share">
-          <p>Remember to share!</p>
-          <img src="img/share.jpg" alt="pic of sharing">
+          <p id="remember">Remember to share!</p>
+          <img src="img/share.jpg" alt="pic of sharing" id="sharePic">
         </div>
       </div>
     </div>
